fix board spacing

--- a/src/app/feature/board/board.component.sass
+++ b/src/app/feature/board/board.component.sass
@@ -2,9 +2,11 @@
   overflow-x: auto
   padding: 0 15px
   height: 100%
+  display: block !important
 
 .cards-container
   display: flex
+  align-items: flex-start
 
 .card-box
   flex-basis: 280px
@@ -99,3 +101,6 @@ img
   width: 100%
   text-align: cebter
   height: 100%
+
+:host .content
+  display: block !important
